gccida/g0/construct_container
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/construct_container/src/i386.c:2423:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/construct_container/src/i386.c:2453:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class classa[4]; // [rsp+50h] [rbp-40h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/construct_container/src/i386.c:2459:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode tmpmode; // [rsp+7Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/construct_container/src/i386.c:2474:18: error: use of undeclared identifier 'off_77B517'
fprintf( stderr, off_77B517, x86_64_reg_class_name[classa[i]]); 
                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/construct_container/src/obj/i386.o] Error 1
